# Read-Aloud-AI

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hf-hub.yml
docs/: how-to-deploy-app-on-hf.md
lab/: full-pipeline.ipynb  testing-gemini-api.ipynb  testing-gradio.ipynb  testing-kokoro-tts-model.ipynb  text-extraction-from-pdf.ipynb
src/: app.py  inference.py  inference_langgraph.py
src/io_schemas/: output_schemas.py  prompts.py
src/openai_api_utils/: __init__.py  controller.py  data_classes.py
src/pdf_reader/: controller.py  helpers.py
src/tts/: controller.py
src/utils/: constants.py  custom_exceptions.py  input_validation.py
